# Arion

Plonk/: README.md
Plonk/Arion/: Cargo.toml  rust-toolchain.toml
Plonk/Arion-merkle/: Cargo.toml  README.md
Plonk/Arion-merkle/benches/: arion.rs  zk.rs
Plonk/Arion-merkle/examples/: zk.rs
Plonk/Arion-merkle/src/: lib.rs  zk.rs
Plonk/Arion-merkle/tests/: zk.rs
Plonk/Arion/benches/: sponge.rs
Plonk/Arion/src/: lib.rs  perm_uses.rs  sponge.rs
Plonk/Arion/src/sponge/: gadget.rs  hash.rs  merkle.rs  truncated.rs
Plonk/Arion/src/strategies/: gadget.rs  scalar.rs
Plonk/Merkle Tree Benchmark/: Cargo.toml  README.md
Plonk/Merkle Tree Benchmark/benches/: arion_height_16_arity_4.rs  arion_height_20_arity_4.rs  arion_height_24_arity_4.rs  arion_height_28_arity_4.rs  arion_zk_height_16_arity_4.rs  arion_zk_height_20_arity_4.rs  arion_zk_height_24_arity_4.rs  arion_zk_height_28_arity_4.rs  poseidon_height_16_arity_4.rs  poseidon_height_20_arity_4.rs  poseidon_height_24_arity_4.rs  poseidon_height_28_arity_4.rs  poseidon_zk_height_16_arity_4.rs  poseidon_zk_height_20_arity_4.rs  poseidon_zk_height_24_arity_4.rs  poseidon_zk_height_28_arity_4.rs
