[package]
name = "arion-merkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-merkle = { version = "0.5" }
arion = { path = "../Arion", default-features = false, features = ["merkle"] }
dusk-bls12_381 = { version = "0.11", default-features = false }
dusk-plonk = { version = "0.14", optional = true, default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[features]
zk = ["dusk-plonk/alloc", "arion/alloc"]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    "dusk-bls12_381/rkyv-impl",
    "dusk-merkle/rkyv-impl"
]

[[bench]]
name = "arion"
harness = false

[[bench]]
name = "zk"
harness = false
required-features = ["zk"]

[[test]]
name = "zk"
required-features = ["zk"]

[[example]]
name = "zk"
required-features = ["zk"]
