[package]
name = "merkle_tree_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
arion = { path = "../Arion", default-features = false, features = ["merkle"] }
arion-merkle = { path = "../Arion-merkle", features = ["zk"] }
dusk-merkle = "0.5"
dusk-poseidon = { version = "0.30", default-features = false, features = ["merkle"] }
poseidon-merkle = { version = "0.2", features = ["zk"] }
dusk-bls12_381 = { version = "0.11", default-features = false }
dusk-plonk = { version = "0.14", optional = true, default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[features]
zk = ["dusk-plonk/alloc", "dusk-poseidon/alloc", "arion/alloc"]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    "dusk-bls12_381/rkyv-impl",
    "dusk-merkle/rkyv-impl"
]


[[bench]]
name = "arion_height_16_arity_4"
harness = false

[[bench]]
name = "arion_zk_height_16_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "arion_height_20_arity_4"
harness = false

[[bench]]
name = "arion_zk_height_20_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "arion_height_24_arity_4"
harness = false

[[bench]]
name = "arion_zk_height_24_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "arion_height_28_arity_4"
harness = false

[[bench]]
name = "arion_zk_height_28_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "poseidon_height_16_arity_4"
harness = false

[[bench]]
name = "poseidon_zk_height_16_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "poseidon_height_20_arity_4"
harness = false

[[bench]]
name = "poseidon_zk_height_20_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "poseidon_height_24_arity_4"
harness = false

[[bench]]
name = "poseidon_zk_height_24_arity_4"
harness = false
required-features = ["zk"]

[[bench]]
name = "poseidon_height_28_arity_4"
harness = false

[[bench]]
name = "poseidon_zk_height_28_arity_4"
harness = false
required-features = ["zk"]
